syntax = "proto3";

package order;
import "google/protobuf/timestamp.proto";
option go_package = "pkg/proto/orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  google.protobuf.Timestamp created_at = 1;
  string customer_id = 2;
  double total_amount = 3;
  string status = 4;
  repeated OrderItem order_items = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string message = 2;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  PROCESSING = 2;
  COMPLETED = 3;
  CANCELLED = 4;
}