syntax = "proto3";

package paymentpb;
option go_package = "pkg/proto/paymentpb";

message PayRequest {
  string order_id = 1;
  int64 amount_cents = 2;
  string currency = 3;
  string customer_id = 4;
  string payment_method_token = 5;
  repeated Item items = 6;
  string idempotency_key = 7;
  map<string, string> metadata = 8;
}

message Item {
  string product_id = 1;
  int32 quantity = 2;
  int64 price_cents = 3;
}

message PayResponse {
  enum Status {
    PAYMENT_UNKNOWN = 0;
    PAYMENT_SUCCESS = 1;
    PAYMENT_FAILED = 2;
    PAYMENT_PENDING = 3;
  }
  Status status = 1;
  string transaction_id = 2;
  string error = 3;
}

service PaymentService {
  rpc Pay(PayRequest) returns (PayResponse);
}
